--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -735,13 +735,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9275735146384823\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 55\n",
+    "print(prediction_function(age))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "age = 55\n",
-    "print(prediction_function)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
